--- a/CSS Advanced Selectors/assets/advanced_selectors.css
+++ b/CSS Advanced Selectors/assets/advanced_selectors.css
@@ -43,4 +43,40 @@ ol {
   font-weight: bold;
 }
 
+input[type="radio"] {
+  cursor: pointer;
+  outline: none;
+}
 
+input[type="submit"] {
+  cursor: pointer;
+  outline: none;
+}
+
+select {
+  cursor: pointer;
+  outline: none;
+}
+
+#review-form:last-child {
+  background-color: gold;
+  
+}
+
+#review-form:last-child :hover {
+  -webkit-filter: brightness(90%);
+  
+}
+
+#directions ol li :nth-of-type(2n) {
+  background-color: whitesmoke;
+}
+
+h2 + .user_review {
+  border-top: 1px, solid, black;
+}
+
+input[type="radio"] {
+  background-image: 
+  -webkit-appearance: none;
+}
